Fix hiding overflow,

--- a/hero-page/src/components/background/Background.module.scss
+++ b/hero-page/src/components/background/Background.module.scss
@@ -1,9 +1,5 @@
 @import '../../styles/abstracts/colors';
 
-* {
-  overflow: hidden;
-}
-
 .bg {
   background-color: $yellow-primary;
   z-index: -1;
